# sb-signing-framework

./: .gitignore  README.md
src/: client
src/client/: client.c  makefile  meson.build  pscp_json.c  pscp_json.h  pscp_sftp.c  pscp_sftp.h  pscp_sftp_test.c  sign_cert_test.sh
src/client-c++/: .clang-format  .gitignore  Makefile  README.md  cli_main.cpp  git_hash.h.in  meson.build  meson_options.txt
src/client-c++/sf_client_lib/: meson.build  sf_client.cpp  sf_curl.cpp  sf_curl.h  sf_json.cpp  sf_json.h
src/client-c++/sf_client_lib/include/sf_client/: sf_client.h  sf_rc.h
src/client-c++/sf_pkcs11/: meson.build
src/client-c++/sf_pkcs11/src/: pkcs11-sf-client.cpp  pkcs11-sf-client.h  pkcs11-sf-json.cpp  pkcs11-sf-json.h  pkcs11-sf-module.cpp  pkcs11-sf-module.h  pkcs11-sf-object.cpp  pkcs11-sf-object.h  pkcs11-sf-session.cpp  pkcs11-sf-session.h  pkcs11-sf-slot.cpp  pkcs11-sf-slot.h  pkcs11-sf-statics.cpp  pkcs11-sf-token.cpp  pkcs11-sf-token.h  pkcs11-sf-types.h
src/client-c++/sf_utils/: meson.build  sf_utils.cpp
src/client-c++/sf_utils/include/sf_utils/: sf_utils.h
src/signframework/: .gitignore  adddropbox  athena.cfg.sample  athenaaux.cfg.sample  audit.c  audit.cfg.sample  audit_archive.c  audit_archive.cfg.sample  cca_functions.c  cca_functions.h  cca_functions_ecc.c  cca_functions_ecc.h  cca_structures.c  cca_structures.h  cca_structures_ecc.c  cca_structures_ecc.h  cleandropbox  debug.h  dropbox_utils.c  dropbox_utils.h  errorcodes.h  framework.c  framework.cfg.sample  framework_test.c  framework_utils.c  framework_utils.h  frameworkkey_generate.c  getpubkey.c  getpubkey.cfg.sample  getpubkeyecc.c  getpubkeyecc.cfg.sample  keygen.c  keygeneccp521.c  ldap_lookup.c  ldap_lookup.h  mail.c  mail.h  makefile  ossl_certificate.c  ossl_certificate.h  (+19 more)
src/signframework/json_regression_test/: json_test.c  makefile
src/signframework/sign_cert/: cca_functions.c  cca_functions.h  cca_structures.c  cca_structures.h  debug.c  makefile  ossl_certificate.c  ossl_certificate.h  ossl_functions.c  sign_cert.c  utils.c
src/signframework/sign_cert/tests/: base_regression.cfg  code_signer_sample.cfg  generateTestFiles.sh  issuer_final_sample.cfg  issuer_final_sample_aux.cfg  issuer_root_sample.cfg  issuer_root_sample_aux.cfg
src/signframework/sign_rsa_raw/: .gitignore  makefile  ossl_functions.h  sign_rsa_raw.c  sign_rsa_raw.cfg.sample
src/signframework/sign_sha256/: makefile  sign_sha256.c  sign_sha256.cfg.sample
src/signframework/sign_sha384/: makefile  sign_sha384.c
src/signframework/sign_sha512/: makefile  sign_sha512.c  sign_sha512.cfg.sample
src/signframework/signecc/: Container.h  cca_functions.h  cca_functions_ecc.c  cca_functions_ecc.h  cca_structures_ecc.c  cca_structures_ecc.h  eccutils.c  eccutils.h  ecdsa521.h  getkeysecc.c  hw_utils.h  makefile  ossl_functions_ecc.c  ossl_functions_ecc.h  regress-ecc.sh  regress-eccloop.sh  sha512.h  signecc-hwa.cfg.sample  signecc-hwaux.cfg.sample  signecc-hwb.cfg.sample  signecc-hwc.cfg.sample  signecc-swaux.cfg.sample  signecc-swp.cfg.sample  signecc-swq.cfg.sample  signecc-swr.cfg.sample  signecc.c  types_t.h
src/signframework/systemd/: signframework.conf  signframework.service
